# DEPRECATED_agl-identity

./: .gitignore  CMakeLists.txt  README.md
binding/: CMakeLists.txt  identity-binding.c
idkey/: CMakeLists.txt  main.c
ll-auth-binding/: CMakeLists.txt  start.sh
ll-auth-binding/conf.d/cmake/: config.cmake
ll-auth-binding/htdocs/: IdentityBinding.js  IdentityBinding2.js  auth.html  auth2.html  index.html
ll-auth-binding/src/: CMakeLists.txt  ll-auth-binding.c
ll-database-binding/: CMakeLists.txt
ll-database-binding/conf.d/cmake/: FindGDBM.cmake  config.cmake
ll-database-binding/conf.d/wgt/: config.xml.in
ll-database-binding/src/: .ll-database-binding.c.swp  CMakeLists.txt  ll-database-binding.c  utils.h
ll-store-binding/: CMakeLists.txt  start.sh  store.sh
ll-store-binding/conf.d/cmake/: config.cmake
ll-store-binding/src/: CMakeLists.txt  ll-store-binding.c
pam/: CMakeLists.txt  agl-identity-usbstick-pam.c
pam_agl/: CMakeLists.txt  pam_agl.c  pam_agl_nfc.c  pam_agl_usb.c
samples/etc/udev/rules.d/: 99-agl-identity.rules
